定时泛亚监控

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # \u914D\u7F6E\u65E5\u5FD7\u6253\u5370\u4FE1\u606F
-logging.level.root=INFO  
-logging.level.org.hibernate=INFO  
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE  
-logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE  
-logging.level.com.itmuch=DEBUG
+#logging.level.root=INFO
+#logging.level.org.hibernate=INFO
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
+#logging.level.com.itmuch=DEBUG
