监控项管理

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <version>3.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
         <!--security-->
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
