--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,8 @@ audience:
   base64Secret: MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
   name: restapiuser
   expiresSecond: 172800
+logging:
+  level:
+    root: info
 
 
