--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ audience:
 logging:
   level:
     root: info
-server:
-  servlet:
-    context-path: /SRPM
+#server:
+#  servlet:
+#    context-path: /SRPM
 
